getting pete's changes

--- a/www/templates/addARecipe.html
+++ b/www/templates/addARecipe.html
@@ -1,9 +1,9 @@
 <ion-view title="Add A Recipe">
-    <ion-content overflow-scroll="true" padding="true"  class="has-header">
-    <!--  <form name="addRecipeForm"
-              novalidate="novalidate"
-              ng-submit="trackMeal(addRecipeForm)"
-              class="create-form">-->
+    <ion-content overflow-scroll="true" padding="true" class="has-header">
+        <form class="list"
+              name="form"
+              ng-submit=""
+              class="create-form">
 
             <section>
                 <label class="item item-input">
@@ -43,12 +43,12 @@
             </section>
             <br />
             <ion-list>
-                <img ng-src="data:image/jpeg;base64,{{picture}}"  height={{height}} width={{width}} alt="" />
+                <img ng-src="data:image/jpeg;base64,{{picture}}" height={{height}} width={{width}} alt="" />
             </ion-list>
             <a class="button button-stable" ng-click="addPicture()">Add a Picture</a>
             <br />
-            <ion-list class="item-icon-right" ng-controller="addARecipeCtrl" ng-model = "retVals" ng-init="ingredient()">
-                <ion-item  ng-class= "balanced" ng-repeat="i in retVals">
+            <ion-list class="item-icon-right" ng-controller="addARecipeCtrl" ng-model="retVals" ng-init="ingredient()">
+                <ion-item ng-class="balanced" ng-repeat="i in retVals">
                     <p>Name: {{i.ingName}}</p>
                     <p>Calories : {{i.calories}} &nbsp;&nbsp;    Protein : {{i.protein}}</p>
                     <p>Sugars : {{i.sugars}}   &nbsp;&nbsp;  Sodium : {{i.sodium}}</p>
@@ -72,7 +72,7 @@
             </ion-list>
 
             <a href="#/page24" class="button button-stable button-block" ng-click="setNew()">Add Ingredient</a>
-            <button class="button button-balanced button-block" ng-click ="trackMeal(addRecipeForm)" >Submit Recipe</button>
-        <!--</form>-->
-    </ion-content>
+            <button class="button button-balanced button-block" ng-click="trackMeal(addRecipeForm)">Submit Recipe</button>
+         </form>
+</ion-content>
 </ion-view>
