--- a/www/templates/dailyNutrition.html
+++ b/www/templates/dailyNutrition.html
@@ -11,7 +11,7 @@
                             <p>Date:  {{i.date  | date:'MM/dd/yyyy'}}</p>
                             <p>Extra Info:  {{i.comments}}</p>
 
-                            <ion-option-button class="button-positive" ng-click="setFill(i)"><i class="icon ion-edit"></i></ion-option-button>
+                            <ion-option-button class="button-positive" ng-click="editNutrition(i)"><i class="icon ion-edit"></i></ion-option-button>
                             <ion-option-button class="button-assertive" ng-click="setRemove(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
                          </ion-item>
                     </ion-list>
