Fixed page processing for adding new items.

--- a/www/templates/dailyNutrition.html
+++ b/www/templates/dailyNutrition.html
@@ -1,6 +1,6 @@
 <ion-view title="Daily Nutrition">
  <ion-content overflow-scroll="true" padding="true" class="has-header">
-     <a href="#/page9" class="button button-stable button-block ">Add New Daily Nutrition</a>
+     <button class="button button-stable button-block" type="submit" ng-click="addNewNutrition()">Add New Daily Nutrition</button>
                 <ion-list>
                     <div class="spacer" style="width: 300px; height: 23px;"></div>
                     <ion-list ng-controller="nutritionCtrl" >
