Update for nutrition and recipe items. Removed editable ability for meds.

--- a/www/templates/myMeds.html
+++ b/www/templates/myMeds.html
@@ -7,7 +7,7 @@
                 <p>Amount Per Serving:  {{i.amount}}</p>
                 <p>Taken:  {{i.taken}}</p>
                 <p>Extra Info:  {{i.extra}}</p>
-                <ion-option-button class="button-positive" ng-click="setFill(i)"><i class="icon ion-edit"></i></ion-option-button>
+                <!--<ion-option-button class="button-positive" ng-click="editMeds(i)"><i class="icon ion-edit"></i></ion-option-button>-->
                 <ion-option-button class="button-assertive" ng-click="deleteMeds(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
             </ion-item>
         </ion-list>
